--- a/Google API.ipynb
+++ b/Google API.ipynb
@@ -2,23 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING!!! This script needs a google API Key to run\n",
+      "Place it inside a file called api_key.txt\n",
+      "AIzaSyBSBDwyMm6n3L241eBV_NKPES8es_mK2ss\n"
+     ]
+    },
+    {
+     "ename": "IpyExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mIpyExit\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import pathlib\n",
     "\n",
     "import googlemaps\n",
     "\n",
-    "gmaps = googlemaps.Client(key='AIzaSyBSBDwyMm6n3L241eBV_NKPES8es_mK2ss')"
+    "print(\"WARNING!!! This script needs a google API Key to run\")\n",
+    "print(\"Place it inside a file called api_key.txt\")\n",
+    "api_key = None\n",
+    "with open(\"api_key.txt\", \"r\") as f:\n",
+    "    api_key = f.readline().strip()\n",
+    "\n",
+    "gmaps = googlemaps.Client(key=api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,9 +145,12 @@
     "            except Exception as e:\n",
     "                print(e)\n",
     "                \n",
+    "        if not testing:\n",
+    "            all_data[state].to_csv(f\"{save_folder}{state}\")\n",
+    "            print(f\"Estado {state} foi salvo sem erros\")\n",
+    "            \n",
     "        print(f\"Estado {state} foi processado\")\n",
     "    \n",
-    "            \n",
     "    print(f\"{count} zonas eleitorais foram processadas\")\n",
     "    print(f\"houveram {len(empty)} erros\")\n",
     "    print(f\"houveram {len(more_than_one)} pesquisas com mais de 1 resultados\")\n",
@@ -139,54 +167,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Estado acre foi salvo sem erros\n",
       "Estado acre foi processado\n",
+      "Estado alagoas foi salvo sem erros\n",
       "Estado alagoas foi processado\n",
+      "Estado amapa foi salvo sem erros\n",
       "Estado amapa foi processado\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Estado amazonas foi salvo sem erros\n",
       "Estado amazonas foi processado\n",
-      "Estado bahia foi processado\n",
-      "Estado ceara foi processado\n",
-      "Estado df foi processado\n",
-      "Estado es foi processado\n",
-      "Estado goias foi processado\n",
-      "Estado maranhao foi processado\n",
-      "698 zonas eleitorais foram processadas\n",
-      "houveram 1 erros\n",
-      "houveram 104 pesquisas com mais de 1 resultados\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 3, got 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-c50986729e16>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfirst_day\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mordered_states\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mfirst_limit\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mempty\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmore_than_one\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_day\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_day\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msave_folder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"processed_zonas_eleitorais/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 3, got 2)"
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "first_day = [x for x in ordered_states[:first_limit]]\n",
-    "empty, more_than_one = run_day(first_day, save_folder=\"processed_zonas_eleitorais/\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_folder = \"processed_zonas_eleitorais/\"\n",
-    "for state, size in first_day: \n",
-    "    all_data[state].to_csv(f\"{save_folder}{state}\") "
+    "empty_first, more_than_one_first = run_day(first_day, save_folder=\"processed_zonas_eleitorais/\")"
    ]
   },
   {
@@ -194,7 +293,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"done running\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(empty_first).to_csv(\"empty_first.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(more_than_one_first).to_csv(\"more_than_one_first.csv\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,192 +324,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Estado mg foi salvo sem erros\n",
       "Estado mg foi processado\n",
+      "Estado ms foi salvo sem erros\n",
       "Estado ms foi processado\n",
+      "Estado mt foi salvo sem erros\n",
       "Estado mt foi processado\n",
+      "Estado pa foi salvo sem erros\n",
       "Estado pa foi processado\n",
+      "Estado pb foi salvo sem erros\n",
       "Estado pb foi processado\n",
+      "Estado pe foi salvo sem erros\n",
       "Estado pe foi processado\n",
+      "Estado pi foi salvo sem erros\n",
       "Estado pi foi processado\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
+      "Estado pr foi salvo sem erros\n",
       "Estado pr foi processado\n",
-      "798 zonas eleitorais foram processadas\n",
-      "houveram 2 erros\n",
-      "houveram 75 pesquisas com mais de 1 resultados\n"
+      "963 zonas eleitorais foram processadas\n",
+      "houveram 5 erros\n",
+      "houveram 106 pesquisas com mais de 1 resultados\n"
      ]
     }
    ],
@@ -402,8 +363,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -414,12 +377,12 @@
     }
    ],
    "source": [
-    "print(\"done running\")"
+    "print(\"done running first day\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,11 +391,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(more_than_one_second).to_csv(\"more_than_one_second\")"
+    "pd.DataFrame(more_than_one_second).to_csv(\"more_than_one_second.csv\")"
    ]
   },
   {
@@ -444,25 +407,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Estado rj foi salvo sem erros\n",
       "Estado rj foi processado\n",
+      "Estado rn foi salvo sem erros\n",
       "Estado rn foi processado\n",
+      "Estado ro foi salvo sem erros\n",
       "Estado ro foi processado\n",
+      "Estado rr foi salvo sem erros\n",
       "Estado rr foi processado\n",
+      "Estado rs foi salvo sem erros\n",
       "Estado rs foi processado\n",
+      "Estado sc foi salvo sem erros\n",
       "Estado sc foi processado\n",
+      "Estado se foi salvo sem erros\n",
       "Estado se foi processado\n",
+      "Estado sp foi salvo sem erros\n",
       "Estado sp foi processado\n",
+      "Estado to foi salvo sem erros\n",
       "Estado to foi processado\n",
       "979 zonas eleitorais foram processadas\n",
       "houveram 2 erros\n",
-      "houveram 65 pesquisas com mais de 1 resultados\n"
+      "houveram 71 pesquisas com mais de 1 resultados\n"
      ]
     }
    ],
@@ -474,14 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,36 +474,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(more_than_one_third).to_csv(\"more_than_one_third\")"
+    "pd.DataFrame(more_than_one_third).to_csv(\"more_than_one_third.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 65]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(list(map(len,[empty_third, more_than_one_third])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
